Perfect scaling to prevent scrollbar

--- a/hangman/style.css
+++ b/hangman/style.css
@@ -9,6 +9,7 @@ body {
   background-color: rgba(247, 248, 233, 0.718);
   align-items: center;
   justify-items: center;
+  max-height: 90vw;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -39,8 +40,8 @@ h1 {font-size: 4vw}
 button {
   background-color: rgb(92, 92, 92);
   border-radius: 10%;
-  width: 200%;
-  font-size: 150%;
+  width: 15vw;
+  font-size: 2vw;
 }
 
 button:hover {
